# MIPT

./: README.md
3DGraph/: 3D.html  output.txt  target.txt
Autoencoder/: Autoencoder.cpp  Autoencoder.h  CMakeLists.txt  main.cpp
Latex/Autoencoder/: Autoencoder.aux  Autoencoder.docx  Autoencoder.tex
Latex/Autoencoder/TrudyMIPT/: Kafedra.docx  Zakliuchenie.docx
NeuralNetwork/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.cpp~  NeuralNetwork.h  NeuralNetwork.h~  main.cpp  main.cpp~
SoftMax/: SoftMax.rar  Softmax.cpp  Softmax.h  main.cpp
